--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love Notes with Image</title>
+    <title>Iu cau</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
-        /* CSS cho khung nhập tên */
+      doc code note ha
         #userName {
             width: 100%;
             padding: 15px;
